// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`works with a defaulted layout 1`] = `
Object {
  "content": Object {
    "bottom": 450,
    "height": 400,
    "id": "content",
    "left": 0,
    "right": 500,
    "top": 50,
    "width": 500,
  },
  "content-1": Object {
    "bottom": 450,
    "height": 400,
    "id": "content-1",
    "left": 0,
    "right": 250,
    "top": 50,
    "width": 250,
  },
  "content-2": Object {
    "bottom": 450,
    "height": 400,
    "id": "content-2",
    "left": 250,
    "right": 500,
    "top": 50,
    "width": 250,
  },
  "footer": Object {
    "bottom": 500,
    "height": 50,
    "id": "footer",
    "left": 0,
    "right": 500,
    "top": 450,
    "width": 500,
  },
  "root": Object {
    "bottom": 500,
    "height": 500,
    "id": "root",
    "left": 0,
    "right": 500,
    "top": 0,
    "width": 500,
  },
  "title": Object {
    "bottom": 50,
    "height": 50,
    "id": "title",
    "left": 0,
    "right": 500,
    "top": 0,
    "width": 500,
  },
}
`;

exports[`works with a double-auto layout 1`] = `
Object {
  "aside": Object {
    "bottom": 500,
    "height": 500,
    "id": "aside",
    "left": 0,
    "right": 100,
    "top": 0,
    "width": 100,
  },
  "content-1": Object {
    "bottom": 500,
    "height": 500,
    "id": "content-1",
    "left": 100,
    "right": 300,
    "top": 0,
    "width": 200,
  },
  "content-2": Object {
    "bottom": 500,
    "height": 500,
    "id": "content-2",
    "left": 300,
    "right": 500,
    "top": 0,
    "width": 200,
  },
  "root": Object {
    "bottom": 500,
    "height": 500,
    "id": "root",
    "left": 0,
    "right": 500,
    "top": 0,
    "width": 500,
  },
}
`;

exports[`works with a simple layout 1`] = `
Object {
  "content": Object {
    "bottom": 420,
    "height": 360,
    "id": "content",
    "left": 20,
    "right": 480,
    "top": 60,
    "width": 460,
  },
  "footer": Object {
    "bottom": 470,
    "height": 50,
    "id": "footer",
    "left": 20,
    "right": 480,
    "top": 420,
    "width": 460,
  },
  "root": Object {
    "bottom": 500,
    "height": 500,
    "id": "root",
    "left": 0,
    "right": 500,
    "top": 0,
    "width": 500,
  },
  "title": Object {
    "bottom": 60,
    "height": 50,
    "id": "title",
    "left": 20,
    "right": 480,
    "top": 10,
    "width": 460,
  },
}
`;

exports[`works with an advanced layout 1`] = `
Object {
  "center": Object {
    "bottom": 320,
    "height": 240,
    "id": "center",
    "left": 140,
    "right": 360,
    "top": 80,
    "width": 220,
  },
  "center-wrapper": Object {
    "bottom": 330,
    "height": 260,
    "id": "center-wrapper",
    "left": 120,
    "right": 380,
    "top": 70,
    "width": 260,
  },
  "chart": Object {
    "bottom": 330,
    "height": 260,
    "id": "chart",
    "left": 20,
    "right": 480,
    "top": 70,
    "width": 460,
  },
  "left": Object {
    "bottom": 330,
    "height": 260,
    "id": "left",
    "left": 20,
    "right": 120,
    "top": 70,
    "width": 100,
  },
  "legend": Object {
    "bottom": 480,
    "height": 150,
    "id": "legend",
    "left": 20,
    "right": 480,
    "top": 330,
    "width": 460,
  },
  "right": Object {
    "bottom": 330,
    "height": 260,
    "id": "right",
    "left": 380,
    "right": 480,
    "top": 70,
    "width": 100,
  },
  "root": Object {
    "bottom": 500,
    "height": 500,
    "id": "root",
    "left": 0,
    "right": 500,
    "top": 0,
    "width": 500,
  },
  "title": Object {
    "bottom": 70,
    "height": 50,
    "id": "title",
    "left": 20,
    "right": 480,
    "top": 20,
    "width": 460,
  },
}
`;
